--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
   <div id="toast-container"></div>
 
   <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
