--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
           </div>
         </form>
 
+        <div style="text-align:right;margin-top:-8px;margin-bottom:16px"><a href="/forgot-password" style="font-size:12px;color:var(--muted);text-decoration:none;hover:color:var(--accent)">Mot de passe oublié ?</a></div>
         <div class="auth-divider">ou</div>
 
         <div class="auth-security">
