--- a/register.html
+++ b/register.html
@@ -58,6 +58,19 @@
             </div>
           </div>
 
+          <!-- Consentement RGPD -->
+          <div class="consent-block" id="consent-block-1">
+            <input type="checkbox" id="consent-cgv" required>
+            <label for="consent-cgv">
+              J'ai lu et j'accepte les <a href="/cgv" target="_blank">Conditions Générales de Vente</a>
+              et la <a href="/politique-confidentialite" target="_blank">Politique de confidentialité</a>. *
+            </label>
+          </div>
+          <div class="consent-block">
+            <input type="checkbox" id="consent-age">
+            <label for="consent-age">Je confirme avoir 16 ans ou plus, conformément à l'article 8 du RGPD.</label>
+          </div>
+
           <div class="auth-submit">
             <button type="submit" id="reg-btn" class="btn btn-gold btn-full" style="padding:13px;font-size:16px">
               Créer mon compte
