--- a/account.html
+++ b/account.html
@@ -57,6 +57,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script src="js/account.js"></script>
 </body>
 </html>
