--- a/admin.html
+++ b/admin.html
@@ -166,6 +166,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script src="js/admin.js"></script>
 </body>
 </html>
