--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script src="js/contact.js"></script>
 </body>
 </html>
