--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script src="js/home.js"></script>
 </body>
 </html>
