--- a/login.html
+++ b/login.html
@@ -78,6 +78,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', initLogin);
   </script>
