--- a/shop.html
+++ b/shop.html
@@ -70,6 +70,7 @@
   <script src="js/storage.js"></script>
   <script src="js/components.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/rgpd.js"></script>
   <script src="js/shop.js"></script>
 </body>
 </html>
