--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,7 @@
         <button class="admin-tab active" data-tab="products">📦 Produits</button>
         <button class="admin-tab" data-tab="orders">🛒 Commandes</button>
         <button class="admin-tab" data-tab="users">👥 Clients</button>
+        <button class="admin-tab" data-tab="settings">⚙️ Paramètres</button>
       </div>
 
       <!-- ── PRODUCTS PANEL ── -->
@@ -155,6 +156,54 @@
           <div class="loading-center"><div class="spinner"></div></div>
         </div>
       </div>
+
+      <!-- SETTINGS PANEL -->
+      <div class="admin-panel" id="admin-panel-settings" style="display:none">
+        <div style="max-width:520px">
+
+          <!-- Changer le mot de passe admin -->
+          <div class="card" style="padding:28px;margin-bottom:20px">
+            <h3 style="font-family:'Rajdhani',sans-serif;font-size:20px;font-weight:700;margin-bottom:4px">🔑 Changer le mot de passe admin</h3>
+            <p style="color:var(--muted);font-size:13px;margin-bottom:20px">Email admin : <strong style="color:var(--accent)">admin@djibshop.com</strong></p>
+            <div class="form-group">
+              <label for="cp-current">Mot de passe actuel</label>
+              <div class="input-icon-wrap">
+                <span class="input-icon">🔒</span>
+                <input type="password" id="cp-current" class="form-control" placeholder="Mot de passe actuel" autocomplete="current-password">
+                <button type="button" id="cp-eye1" class="input-eye">👁</button>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="cp-new">Nouveau mot de passe</label>
+              <div class="input-icon-wrap">
+                <span class="input-icon">🔐</span>
+                <input type="password" id="cp-new" class="form-control" placeholder="Min. 6 caractères" autocomplete="new-password">
+                <button type="button" id="cp-eye2" class="input-eye">👁</button>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="cp-confirm">Confirmer le nouveau mot de passe</label>
+              <div class="input-icon-wrap">
+                <span class="input-icon">🔐</span>
+                <input type="password" id="cp-confirm" class="form-control" placeholder="Répéter le mot de passe" autocomplete="new-password">
+              </div>
+            </div>
+            <div id="cp-error" style="color:var(--red);font-size:13px;min-height:18px;margin-bottom:8px"></div>
+            <button id="cp-save" class="btn btn-gold" style="width:100%;padding:13px">Enregistrer le nouveau mot de passe</button>
+          </div>
+
+          <!-- Infos compte admin -->
+          <div class="card" style="padding:20px;background:var(--bg3);border:1px solid var(--border)">
+            <h4 style="font-family:'Rajdhani',sans-serif;font-size:15px;font-weight:700;color:var(--text);margin-bottom:12px">ℹ️ Infos techniques</h4>
+            <p style="color:var(--muted);font-size:12px;line-height:1.8;margin:0">
+              • L'email admin est fixe : <strong>admin@djibshop.com</strong><br>
+              • Le mot de passe est haché avec bcrypt (sécurisé)<br>
+              • En cas d'oubli total, changez <code>ADMIN_PASSWORD</code> dans Railway et redéployez
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
 
